--- a/index.html
+++ b/index.html
@@ -40,6 +40,7 @@
             border-radius: 30px;
             margin-top: 20px;
             transition: 0.3s;
+            width: auto;
         }
 
         button:hover { background: #ff79b0; }
@@ -52,6 +53,7 @@
         #final h2 {
             color: #ffffff
         }
+
         .heart {
             position: absolute;
             width: 100px;
@@ -119,42 +121,92 @@
         }
 
         #message {
-    position: relative;
-    background: rgba(255, 255, 255, 0.2);
-    padding: 20px;
-    border-radius: 15px;
-    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
-}
+            position: relative;
+            background: rgba(255, 255, 255, 0.2);
+            padding: 20px;
+            border-radius: 15px;
+            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.4);
+            max-width: 90%;
+            margin: 0 auto;
+        }
 
-.sub-message {
-    font-size: 20px;
-    color: #fffff4;
-    margin-top: 10px;
-    font-style: italic;
-    text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.6);
-}
+        .sub-message {
+            font-size: 20px;
+            color: #fffff4;
+            margin-top: 10px;
+            font-style: italic;
+            text-shadow: 2px 2px 10px rgba(255, 255, 255, 0.6);
+        }
 
-#message::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: radial-gradient(circle, rgba(255, 255, 255, 0.4) 20%, transparent 60%);
-    opacity: 0.5;
-    pointer-events: none;
-    animation: sparkle 3s infinite;
-}
+        #message::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background: radial-gradient(circle, rgba(255, 255, 255, 0.4) 20%, transparent 60%);
+            opacity: 0.5;
+            pointer-events: none;
+            animation: sparkle 3s infinite;
+        }
 
-@keyframes sparkle {
-    0% { opacity: 0.5; transform: scale(1); }
-    25% { opacity: 1; transform: scale(1.05); }
-    50% { opacity: 0.5; transform: scale(1); }
-    75% { opacity: 1; transform: scale(1.05); }
-    100% { opacity: 0.5; transform: scale(1); }
-}
+        @keyframes sparkle {
+            0% { opacity: 0.5; transform: scale(1); }
+            25% { opacity: 1; transform: scale(1.05); }
+            50% { opacity: 0.5; transform: scale(1); }
+            75% { opacity: 1; transform: scale(1.05); }
+            100% { opacity: 0.5; transform: scale(1); }
+        }
 
+        /* Media Queries for responsiveness */
+        @media (max-width: 768px) {
+            h1, h2, .poem {
+                font-size: 1.5rem;
+            }
+
+            .buttons button {
+                font-size: 18px;
+                padding: 12px 24px;
+            }
+
+            .heart {
+                width: 80px;
+                height: 80px;
+            }
+
+            .gallery img, .gallery video {
+                max-width: 250px;
+            }
+
+            .sub-message {
+                font-size: 18px;
+            }
+        }
+
+        @media (max-width: 480px) {
+            h1, h2, .poem {
+                font-size: 1.2rem;
+            }
+
+            .buttons button {
+                font-size: 16px;
+                padding: 10px 20px;
+            }
+
+            .heart {
+                width: 60px;
+                height: 60px;
+            }
+
+            .gallery img, .gallery video {
+                max-width: 200px;
+            }
+
+            .sub-message {
+                font-size: 16px;
+            }
+        }
     </style>
 </head>
 <body>
@@ -170,8 +222,6 @@
         <button onclick="extraStep()">See Something Special</button>
     </div>
     
-    
-
     <div id="extra">
         <h2>A special message just for you...</h2>
         <p>Roses are red, violets are blue, even from Lake Tahoe, I'm thinking of you! ❤️</p>
