--- a/index.html
+++ b/index.html
@@ -103,22 +103,25 @@
         canvas { position: absolute; top: 0; left: 0; width: 100%; height: 100%; pointer-events: none; }
 
         .gallery {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-            gap: 20px;
-            width: 80%;
-            margin: 0 auto;
-            justify-items: center;
-        }
+    display: flex;
+    flex-wrap: nowrap;
+    overflow-x: auto;
+    gap: 20px;
+    width: 80%;
+    margin: 0 auto;
+    justify-items: center;
+    scroll-snap-type: x mandatory;
+}
 
-        .gallery img, .gallery video {
-            width: 100%;
-            height: auto;
-            max-width: 300px;
-            border-radius: 15px;
-            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-            object-fit: cover;
-        }
+.gallery img, .gallery video {
+    width: 100%;
+    height: auto;
+    max-width: 300px;
+    border-radius: 15px;
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+    object-fit: cover;
+    scroll-snap-align: start;
+}
 
         #message {
             position: relative;
