--- a/index.html
+++ b/index.html
@@ -107,15 +107,17 @@
     flex-wrap: nowrap;
     overflow-x: auto;
     gap: 20px;
-    width: 80%;
+    width: 100%;
     margin: 0 auto;
+    justify-content: center;
     justify-items: center;
     scroll-snap-type: x mandatory;
+    padding: 20px 0; /* Para darle un poco de espacio arriba y abajo */
 }
 
 .gallery img, .gallery video {
-    width: 100%;
-    height: auto;
+    width: auto;
+    height: 100%;
     max-width: 300px;
     border-radius: 15px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
@@ -162,8 +164,12 @@
             100% { opacity: 0.5; transform: scale(1); }
         }
 
-        /* Media Queries for responsiveness */
         @media (max-width: 768px) {
+
+            .gallery {
+        justify-content: center;
+    }
+
             h1, h2, .poem {
                 font-size: 1.5rem;
             }
